Fix some compile issues caused by upgrading