@@ -91,7 +91,7 @@ public class Trino2SRFunctionCallTransformer {
                 "approx_count_distinct", List.of(Expr.class));
 
         registerFunctionTransformer("approx_distinct", 2,
-                "approx_count_distinct", ImmutableList.of(Expr.class, Expr.class));
+                "approx_count_distinct", List.of(Expr.class, Expr.class));
 
         // 2. arbitrary
         registerFunctionTransformer("arbitrary", 1,
